# speechbrain

./: .dict-speechbrain.txt  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .pre-push-config.yaml  .pyre_configuration  .readthedocs.yaml  .run-doctests.sh  .run-linters.sh  .run-unittests.sh  .yamllint.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  DataCreation.ipynb  PERFORMANCE.md  README.md  SECURITY.md  conftest.py  core-python-757076-6  core.py  cspell.json  data_augmentation.py  data_io.py  data_preparation.py  data_processing.py  demo.py  dummy.py  dummy_para.py  emotion_test.py  lint-requirements.txt  logging.yaml  neural_networks.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_experiment.py  (+6 more)
.dvc/: config
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: config.yml  recipes.yaml
.github/workflows/: coverage-comment.yml  mainmerge.yml  newtag.yml  pre-commit.yml  pythonapp.yml  release.yml  verify-docs-gen.yml
cfg/features/: fbank_features.cfg  features.yaml  mfcc_features.cfg  mfcc_features.py
docs/: Makefile  README.md  audioloading.rst  codereview.md  compilation.md  conf.py  contributing.md  coverage.md  devtools.md  docs-requirements.txt  experiment.md  guidance.md  index.rst  installation.md  multigpu.md  newversion.md  readthedocs-requirements.txt
docs/_apidoc_templates/: module.rst
docs/source/: conf.py  contributing.md  experiment.md  index.rst  installation.md  multigpu.md  tutorials.md
docs/tutorials/: advanced.rst  asr.rst  basics.rst  classification.rst  enhancement.rst  nn.rst  notebook-footer.md  notebook-header.md  preprocessing.rst  processing.rst  separation.rst  tasks.rst
lib/: core.py  utils.py
lib/data_io/: data_io.py  data_preparation.py
lib/decoders/: decoders.py
lib/nnet/: architectures.py  losses.py  lr_scheduling.py  normalization.py  optimizers.py
lib/processing/: features.py  speech_augmentation.py
lib/utils/: __init__.py  config.py  data_utils.py  edit_distance.py  input_validation.py  logger.py  superpowers.py
pdoc_templates/: credits.mako  html.mako
recipes/: features.py  features.yaml
recipes/AISHELL-1/: README.md  aishell_prepare.py  prepare.py
recipes/AMI/: ami_opts.py  ami_prepare.py  ami_splits.py  voxceleb_prepare.py
recipes/Aishell1Mix/: extra-dependencies.txt  extra-requirements.txt  extra_requirements.txt  prepare_data.py
recipes/AudioMNIST/: audiomnist_prepare.py
recipes/BEST-RQ/: calculate_run.py  librispeech_prepare.py  notes.md  quantiser.py  train.py
recipes/BinauralWSJ0Mix/: extra-dependencies.txt  extra-requirements.txt  extra_requirements.txt  prepare_data.py
recipes/CVSS/: cvss_prepare.py
recipes/CoVoST/: covost_prepare.py
recipes/CommonLanguage/: README.md  common_language_prepare.py
recipes/CommonVoice/: common_voice_download.py  common_voice_prepare.py  common_voice_sense_prepare.py
recipes/ConferencingSpeech/: extra-dependencies.txt  prepare_data.py
recipes/DCASE/: README.md  requirements.txt
recipes/DNS/: README.md  create_wds_shards.py  dns_download.py  dns_prepare.py  prepare_dns.py
recipes/DVoice/: dvoice_prepare.py
recipes/Domestic-Sound-Event-Detection/: README.md  data_label_pipeline.py  download_data.py  prepare_dcase2019_task4.py  requirements.txt  train.py  train.yaml  utils_dcase2019.py
recipes/ESC50/: custom_models.py  esc50_prepare.py  mushra.csv  summarize_userstudyicml2024.py  wham_prepare.py
recipes/ESTER+EPAC+ETAPE+REPERE/: stm_prepare.py
recipes/Fisher-Callhome-Spanish/: README.md  fisher_callhome_prepare.py  pre_processing.py
recipes/GigaSpeech/: README.md  dataset.py  download_gigaspeech.py  extra_requirements.txt  gigaspeech_prepare.py
recipes/Google-speech-commands/: README.md  prepare_GSC.py  train.py
recipes/IEMOCAP/: README.md  iemocap_prepare.py  readme.md
recipes/IWSLT22_lowresource/: README.md  extra-requirements.txt  extra_requirements.txt  prepare_iwslt22.py  train.py  train_samu.py  train_with_samu_mbart.py  train_with_w2v_mbart.py
recipes/KsponSpeech/: README.md  convert_to_wav.py  ksponspeech_prepare.py  unzip_ksponspeech.sh
recipes/LJSpeech/: ljspeech_prepare.py
speechbrain/: YAML.md  __init__.py  core.py  ddp.py  module.py  sbmodule.py  yaml.py
speechbrain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: README.md
tests/: .run-HF-checks.sh  .run-doctests.sh  .run-linters.sh  .run-load-yaml-tests.sh  .run-recipe-tests-old.sh  .run-recipe-tests.sh  .run-third-party.sh  .run-unittests.sh  .run-url-checks.sh  PRE-RELEASE-TESTS.md  README.md  __init__.py  integration  recipes.csv  test_activations.py  test_augment.py  test_core.py  test_dropout.py  test_edit_distance.py  test_epoch_loop.py  test_extended_yaml.py  test_features.py  test_linear.py  test_losses.py  test_pooling.py  test_recovery.py  test_replicate.py  test_speechbrain_module.py
tmpdir/: hyperparams.yaml
tmpdir_vocoder/: generator.ckpt  hyperparams.yaml
tokenizer_data/: 2000_bpe.model
tools/: but_phone_recognizer.py  compute-wer.py  compute_wer.py  g2p.py  merge_scp.py  readme_builder.py  synthesis.py  tutorial-cell-updater.py  visualize_pkl.py
tutorials/: ASRfromScratch.ipynb  BrainClass.ipynb  Checkpointing in SpeechBrain.ipynb  Complex and Quaternion Neural Networks.ipynb  DynamicBatchingTutorial.ipynb  EnvironmentalCorruption.ipynb  Flower_SpeechBrain.ipynb  FourierTransform+Specgrams.ipynb  HyperPyYaml.ipynb  Introduction_to_SpeechBrain.ipynb  MultiGPU.ipynb  MultiMicrophoneBeamforming.ipynb  RNNs.ipynb  SEfromScratch.ipynb  Sharded data loading with WebDataset in SpeechBrain.ipynb  SourceSeparation.ipynb  SpeakerIDfromScratch.ipynb  SpeechAugmentation.ipynb  SpeechBrain_Hyperparameter_Optimization .ipynb  SpeechBrain_profiling.ipynb  SpeechFeatures.ipynb  Tokenizer_tutorial.ipynb  Voice_Activity_Detection.ipynb  What_can_I_do.ipynb  What_new_in_SpeechBrian10_.ipynb  dataioBasics.ipynb  huggingface_wav2vec_whisper.ipynb  inferring.ipynb  pretraining.ipynb
(+4916 files in other folders)
