[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechbrain"
dynamic = ["version"]
description = "All-in-one speech toolkit in pure Python and Pytorch"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mirco Ravanelli, Titouan Parcollet, Adel Moumen, Sylvain de Langen, Cem Subakan, Peter Plantinga, Yingzhi Wang, Pooneh Mousavi, Luca Della Libera, Artem Ploujnikov, Francesco Paissan, Davide Borra, Salah Zaiem, Zeyu Zhao, Shucong Zhang, Georgios Karakasidis, Sung-Lin Yeh, Pierre Champion, Aku Rouhe, Rudolf Braun, Florian Mai, Juan Zuluaga-Gomez, Seyed Mahed Mousavi, Andreas Nautsch, Ha Nguyen, Xuechen Liu, Sangeet Sagar, Jarod Duret, Salima Mdhaffar, Gaelle Laperriere, Mickael Rouvier, Renato De Mori, Yannick Esteve"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.8.1"
dependencies = [
    "hyperpyyaml>=0.0.1",
    "joblib>=0.14.1",
    "numpy>=1.17.0",
    "packaging",
    "scipy>=1.4.1",
    "sentencepiece>=0.1.91",
    "torch>=2.1.0,<2.9",
    "torchaudio>=2.1.0,<2.9",
    "tqdm>=4.42.0",
    "huggingface_hub>=0.8.0",
]
keywords = ["speech", "audio", "pytorch", "deep-learning"]

[project.urls]
Homepage = "https://speechbrain.github.io/"

[project.optional-dependencies]
dev = [
    "ruff==0.12.4",
    "pytest==7.4.0",
    "yamllint==1.35.1",
    "pre-commit>=2.3.0",
    "pandas>=1.0.1",
    "transformers>=4.30.0",
    "codespell>=2.3.0",
]

[tool.setuptools.dynamic]
version = {file = "speechbrain/version.txt"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
speechbrain = ["version.txt", "log-config.yaml"]

[tool.ruff]
target-version = "py38"
line-length = 80
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "tests/tmp",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B007",  # Loop control variable not used within loop body
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
    "B028",  # No explicit `stacklevel` keyword argument found
    "C400",  # Unnecessary generator (rewrite as a `list` comprehension)
    "C401",  # Unnecessary generator (rewrite as a `set` comprehension)
    "C403",  # Unnecessary `list` comprehension (rewrite as a `set` comprehension)
    "C404",  # Unnecessary `list` call within `sorted()`
    "C405",  # Unnecessary `list` literal (rewrite as a `set` literal)
    "C408",  # Unnecessary `dict`/`list` call (rewrite as literal)
    "C409",  # Unnecessary `tuple` literal passed to `tuple()`
    "C414",  # Unnecessary `list` call within `sorted()`
    "C416",  # Unnecessary `list` comprehension (rewrite using `list()`)
    "C417",  # Unnecessary `map` usage (rewrite using a `list` comprehension)
    "C419",  # Unnecessary list comprehension
    "E203",  # whitespace before ':' (black compatibility)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by formatter)
    "E721",  # Do not compare types, use `isinstance()`
    "F601",  # Dictionary key literal repeated
    "UP008",  # Use `super()` instead of `super(__class__, self)`
    "UP028",  # Replace `yield` over `for` loop with `yield from`
    "UP030",  # Use implicit references for positional format fields
    "UP031",  # Use format specifiers instead of percent format
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "B011",  # Do not `assert False` (`python -O` removes these calls), raise `AssertionError()`
    "B019",  # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "B023",  # Function definition does not bind loop variable
    "B026",  # Star-arg unpacking after a keyword argument is strongly discouraged
]

[tool.ruff.lint.isort]
# Import sorting configuration (black-compatible)
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["speechbrain"]
known-third-party = ["torch", "torchaudio", "numpy", "scipy", "hyperpyyaml", "joblib", "packaging", "sentencepiece", "tqdm", "huggingface_hub"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.codespell]
skip = "./tests/tmp,./**/result,*.csv,*train.txt,*test.txt"
